--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urw-classicsans",
+  "name": "@ksilvennoinen/urw-classicsans",
   "version": "1.0.0",
   "main": "index.css",
   "description": "URW Classic Sans fonts",
