--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "homepage": "https://github.com/kari/urw-classicsans",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kari/urw-classicsans.git"
+    "url": "git+https://github.com/kari/urw-classicsans.git"
   },
   "devDependencies": {
     "bent": "^7.3.12",
